--- a/crop_needs.ipynb
+++ b/crop_needs.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "3a50cc2d",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "da380126",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "cdc76d70",
    "metadata": {},
    "outputs": [],
@@ -134,18 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "4b2d977d",
    "metadata": {},
    "outputs": [],
    "source": [
     "Crop_data['ETM']=Crop_data['ET0']*Crop_data['Kc']\n",
-    "Crop_data['I']=(Crop_data['ETM']-Crop_data['Rainfall']/N_days)*S*10000 #m3 water/day"
+    "Crop_data['I']=(Crop_data['ETM']-Crop_data['Rainfall']/N_days)*S*10 #m3 water/day : /1000 *10000 (1ha)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f49dd27",
+   "metadata": {},
+   "source": [
+    "De Moea: j'ai divisé par 1000 car 1mm= 10^-3 m3 (1mm de hauteur d'eau dans 1 m2) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "d53d4df0",
    "metadata": {},
    "outputs": [
@@ -190,7 +198,7 @@
        "      <td>137</td>\n",
        "      <td>17.9832</td>\n",
        "      <td>12.58824</td>\n",
-       "      <td>2.967982e+07</td>\n",
+       "      <td>29679.821333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -201,7 +209,7 @@
        "      <td>96</td>\n",
        "      <td>125.3952</td>\n",
        "      <td>137.93472</td>\n",
-       "      <td>4.985185e+08</td>\n",
+       "      <td>498518.464000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -212,7 +220,7 @@
        "      <td>93</td>\n",
        "      <td>118.7802</td>\n",
        "      <td>130.65822</td>\n",
-       "      <td>4.719654e+08</td>\n",
+       "      <td>471965.414000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -223,7 +231,7 @@
        "      <td>97</td>\n",
        "      <td>182.7580</td>\n",
        "      <td>91.37900</td>\n",
-       "      <td>3.261390e+08</td>\n",
+       "      <td>326138.966667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -234,7 +242,7 @@
        "      <td>189</td>\n",
        "      <td>166.7134</td>\n",
        "      <td>116.69938</td>\n",
-       "      <td>4.084777e+08</td>\n",
+       "      <td>408477.706000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -245,7 +253,7 @@
        "      <td>248</td>\n",
        "      <td>174.4373</td>\n",
        "      <td>191.88103</td>\n",
-       "      <td>6.793731e+08</td>\n",
+       "      <td>679373.144333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -256,7 +264,7 @@
        "      <td>291</td>\n",
        "      <td>175.8732</td>\n",
        "      <td>193.46052</td>\n",
-       "      <td>6.799139e+08</td>\n",
+       "      <td>679913.924000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -267,7 +275,7 @@
        "      <td>310</td>\n",
        "      <td>216.6912</td>\n",
        "      <td>108.34560</td>\n",
-       "      <td>3.626454e+08</td>\n",
+       "      <td>362645.386667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -278,7 +286,7 @@
        "      <td>281</td>\n",
        "      <td>180.2640</td>\n",
        "      <td>126.18480</td>\n",
-       "      <td>4.322271e+08</td>\n",
+       "      <td>432227.093333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -289,7 +297,7 @@
        "      <td>280</td>\n",
        "      <td>124.5006</td>\n",
        "      <td>136.95066</td>\n",
-       "      <td>4.721841e+08</td>\n",
+       "      <td>472184.108667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -300,7 +308,7 @@
        "      <td>230</td>\n",
        "      <td>115.4250</td>\n",
        "      <td>126.96750</td>\n",
-       "      <td>4.414131e+08</td>\n",
+       "      <td>441413.083333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -311,7 +319,7 @@
        "      <td>207</td>\n",
        "      <td>177.2263</td>\n",
        "      <td>88.61315</td>\n",
-       "      <td>3.023387e+08</td>\n",
+       "      <td>302338.655000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -332,22 +340,22 @@
        "10   November        25.65     4.50  1.1       230  115.4250  126.96750   \n",
        "11   December        25.21     7.03  0.5       207  177.2263   88.61315   \n",
        "\n",
-       "               I  \n",
-       "0   2.967982e+07  \n",
-       "1   4.985185e+08  \n",
-       "2   4.719654e+08  \n",
-       "3   3.261390e+08  \n",
-       "4   4.084777e+08  \n",
-       "5   6.793731e+08  \n",
-       "6   6.799139e+08  \n",
-       "7   3.626454e+08  \n",
-       "8   4.322271e+08  \n",
-       "9   4.721841e+08  \n",
-       "10  4.414131e+08  \n",
-       "11  3.023387e+08  "
+       "                I  \n",
+       "0    29679.821333  \n",
+       "1   498518.464000  \n",
+       "2   471965.414000  \n",
+       "3   326138.966667  \n",
+       "4   408477.706000  \n",
+       "5   679373.144333  \n",
+       "6   679913.924000  \n",
+       "7   362645.386667  \n",
+       "8   432227.093333  \n",
+       "9   472184.108667  \n",
+       "10  441413.083333  \n",
+       "11  302338.655000  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,20 +370,237 @@
    "metadata": {},
    "source": [
     "# 3\n",
-    "Use the irrigation efficiency for gravity irrigation in a sandy soil (check L4.3) to obtain the gross water need"
+    "Use the irrigation efficiency for gravity irrigation in a sandy soil (check L4.3) to obtain the gross water need: B=Bn/e, with Bn calculated above"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "b7fe6eba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Water_T</th>\n",
+       "      <th>Kc</th>\n",
+       "      <th>Rainfall</th>\n",
+       "      <th>ET0</th>\n",
+       "      <th>ETM</th>\n",
+       "      <th>I</th>\n",
+       "      <th>Gross_I</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>January</td>\n",
+       "      <td>4.72</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>137</td>\n",
+       "      <td>17.9832</td>\n",
+       "      <td>12.58824</td>\n",
+       "      <td>29679.821333</td>\n",
+       "      <td>40067.75880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>February</td>\n",
+       "      <td>24.88</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>96</td>\n",
+       "      <td>125.3952</td>\n",
+       "      <td>137.93472</td>\n",
+       "      <td>498518.464000</td>\n",
+       "      <td>672999.92640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>March</td>\n",
+       "      <td>25.71</td>\n",
+       "      <td>4.62</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93</td>\n",
+       "      <td>118.7802</td>\n",
+       "      <td>130.65822</td>\n",
+       "      <td>471965.414000</td>\n",
+       "      <td>637153.30890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>April</td>\n",
+       "      <td>26.68</td>\n",
+       "      <td>6.85</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>97</td>\n",
+       "      <td>182.7580</td>\n",
+       "      <td>91.37900</td>\n",
+       "      <td>326138.966667</td>\n",
+       "      <td>440287.60500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>May</td>\n",
+       "      <td>27.02</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>189</td>\n",
+       "      <td>166.7134</td>\n",
+       "      <td>116.69938</td>\n",
+       "      <td>408477.706000</td>\n",
+       "      <td>551444.90310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>June</td>\n",
+       "      <td>26.47</td>\n",
+       "      <td>6.59</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>248</td>\n",
+       "      <td>174.4373</td>\n",
+       "      <td>191.88103</td>\n",
+       "      <td>679373.144333</td>\n",
+       "      <td>917153.74485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>July</td>\n",
+       "      <td>25.94</td>\n",
+       "      <td>6.78</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>291</td>\n",
+       "      <td>175.8732</td>\n",
+       "      <td>193.46052</td>\n",
+       "      <td>679913.924000</td>\n",
+       "      <td>917883.79740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>August</td>\n",
+       "      <td>25.92</td>\n",
+       "      <td>8.36</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>310</td>\n",
+       "      <td>216.6912</td>\n",
+       "      <td>108.34560</td>\n",
+       "      <td>362645.386667</td>\n",
+       "      <td>489571.27200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>September</td>\n",
+       "      <td>25.90</td>\n",
+       "      <td>6.96</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>281</td>\n",
+       "      <td>180.2640</td>\n",
+       "      <td>126.18480</td>\n",
+       "      <td>432227.093333</td>\n",
+       "      <td>583506.57600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>October</td>\n",
+       "      <td>25.83</td>\n",
+       "      <td>4.82</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>280</td>\n",
+       "      <td>124.5006</td>\n",
+       "      <td>136.95066</td>\n",
+       "      <td>472184.108667</td>\n",
+       "      <td>637448.54670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>November</td>\n",
+       "      <td>25.65</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>230</td>\n",
+       "      <td>115.4250</td>\n",
+       "      <td>126.96750</td>\n",
+       "      <td>441413.083333</td>\n",
+       "      <td>595907.66250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>December</td>\n",
+       "      <td>25.21</td>\n",
+       "      <td>7.03</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>207</td>\n",
+       "      <td>177.2263</td>\n",
+       "      <td>88.61315</td>\n",
+       "      <td>302338.655000</td>\n",
+       "      <td>408157.18425</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Month  Temperature  Water_T   Kc  Rainfall       ET0        ETM  \\\n",
+       "0     January         4.72     3.81  0.7       137   17.9832   12.58824   \n",
+       "1    February        24.88     5.04  1.1        96  125.3952  137.93472   \n",
+       "2       March        25.71     4.62  1.1        93  118.7802  130.65822   \n",
+       "3       April        26.68     6.85  0.5        97  182.7580   91.37900   \n",
+       "4         May        27.02     6.17  0.7       189  166.7134  116.69938   \n",
+       "5        June        26.47     6.59  1.1       248  174.4373  191.88103   \n",
+       "6        July        25.94     6.78  1.1       291  175.8732  193.46052   \n",
+       "7      August        25.92     8.36  0.5       310  216.6912  108.34560   \n",
+       "8   September        25.90     6.96  0.7       281  180.2640  126.18480   \n",
+       "9     October        25.83     4.82  1.1       280  124.5006  136.95066   \n",
+       "10   November        25.65     4.50  1.1       230  115.4250  126.96750   \n",
+       "11   December        25.21     7.03  0.5       207  177.2263   88.61315   \n",
+       "\n",
+       "                I       Gross_I  \n",
+       "0    29679.821333   40067.75880  \n",
+       "1   498518.464000  672999.92640  \n",
+       "2   471965.414000  637153.30890  \n",
+       "3   326138.966667  440287.60500  \n",
+       "4   408477.706000  551444.90310  \n",
+       "5   679373.144333  917153.74485  \n",
+       "6   679913.924000  917883.79740  \n",
+       "7   362645.386667  489571.27200  \n",
+       "8   432227.093333  583506.57600  \n",
+       "9   472184.108667  637448.54670  \n",
+       "10  441413.083333  595907.66250  \n",
+       "11  302338.655000  408157.18425  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# efficiency gravity irrigation sandy soil\n",
     "e_sand=0.35\n",
     "\n",
-    "Crop_data['Gross_I']=(1+e_sand)*Crop_data['I']"
+    "Crop_data['Gross_I']=Crop_data['I']/e_sand\n",
+    "Crop_data"
    ]
   },
   {
@@ -463,7 +688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
